--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,7 +4,7 @@ body {
     background-color: black;
 }
 .square {
-    width: 120px;
+    width: 100px;
     height: 100px;
     background-color: rgba(85, 83, 83, 0.548);
     border-radius: 15x;
@@ -13,4 +13,9 @@ body {
     align-items: center;
     justify-content: center;
     font-size: 30px;
+    border-radius: 10px;
+}
+img {
+    max-width: 100%;
+    border-radius: 10px;
 }
